# kicad-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: README.md  release.toml
kicad-release/: README.md  pyproject.toml
kicad-release/docs/superpowers/plans/: 2026-04-14-kicad-release-tool.md
kicad-release/example/: release.toml
kicad-release/release_generator/: __main__.py  assembly_drawing.py  board_introspect.py  bom.py  config.py  fab_drawing.py  gerbers.py  kicad_cli.py  naming.py  pipeline.py  project_dump.py  render3d.py  schematic.py  step.py  stl.py  svg_template.py  svg_to_pdf.py
kicad-release/tests/: conftest.py
kicad-release/tests/integration/: _helpers.py  test_assembly_drawing.py  test_board_introspect.py  test_gerbers.py  test_pipeline_e2e.py  test_schematic.py  test_svg_to_pdf.py
kicad-release/tests/unit/: test_bom.py  test_config.py  test_svg_template.py
kicad-viewer/: .gitignore  DEPLOY.md  README.md  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vitest.config.ts  wrangler.jsonc
kicad-viewer/src/: app.css
kicad-viewer/tests/: smoke-checklist.md
release_generator/: __main__.py  assembly_drawing.py  board_introspect.py  bom.py  config.py  fab_drawing.py  gerbers.py  kicad_cli.py  pipeline.py  render3d.py  schematic.py  utils.py
templates/: README.md
tests/: conftest.py
tests/integration/: _helpers.py  test_assembly_drawing.py  test_board_introspect.py  test_bom_integration.py  test_fab_drawing.py  test_gerbers.py  test_kicad_cli.py  test_pipeline_e2e.py  test_render3d.py  (+1 more)
(+112 files in other folders)
