[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kicad-release"
version = "0.1.0"
description = "Generate production release packages from KiCad projects"
requires-python = ">=3.11"
dependencies = [
    "lxml>=5.0",
    "cairosvg>=2.7",
    "Pillow>=10.0",
    "sexpdata>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
kicad-release = "release_generator.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["release_generator*"]
